<?xml version="1.0"?>
<package format="2">
  <name>hector_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The hector_rviz_plugins package</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>

  <license>GPLv3</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hector_rviz_plugins</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <depend>hector_rviz_plugins_msgs</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>rviz</depend>
  <depend>std_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
