<?xml version="1.0"?>
<package format="2">
  <name>hector_rviz_plugins_msgs</name>
  <version>0.0.0</version>
  <description>The hector_rviz_plugins_msgs package</description>

  <maintainer email="fabian@sim.tu-darmstadt.de">Stefan Fabian</maintainer>


  <license>GPLv3</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/hector_rviz_plugins_msgs</url> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_msgs</depend>

</package>
